    of upstream changes.

  +++ Changes by George Kiagiadakis:

  * Update automoc (build-)dependency to 1.0~svn850570.

  +++ Changes by Ana Beatriz Guerrero Lopez:
  
  * Rework slightly patch 15_kfreebsd_support.diff.
  * Redo patch 20_use_dejavu_as_default_font.diff.
  * Force to build depend on libphonon-dev (>= 4:4.2.80).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 13 Dec 2008 01:39:11 +0200

kde4libs (4:4.1.3-2) experimental; urgency=low

  +++ Changes by Modestas Vainius:

  * Bump kdebase-runtime dependency back to 4.1.3. The previous change was
    a mistake.
  * Bump kdelibs5 shlibs to 4.1.3-2 to ease the pain.

  +++ Changes by Sune Vuorela:

  * Add patch for http cache cleaner to keep the cache revision in sync.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 07 Nov 2008 22:18:05 +0200

kde4libs (4:4.1.3-1) experimental; urgency=low

  * New upstream release

  +++ Changes by Sune Vuorela:

  * Remove kdedglobalaccel crash patch. Merged upstream.
  
  +++ Changes by Modestas Vainius:

  * Bump shlibs to 4.1.3.
  * Loosen kdebase-runtime dependency back to 4.1.0. There seems to be no
    other easy way to solve experimental buildd failures. This should not
    hurt too much.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 04 Nov 2008 09:56:56 +0200

kde4libs (4:4.1.2-2) experimental; urgency=low

  * Fix kdedglobalaccel crashes. Patch 02. 

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sun, 12 Oct 2008 20:00:14 +0200

kde4libs (4:4.1.2-1) experimental; urgency=low

  * New upstream release.
  * Update UPSTREAMVERSION to 4.1.2 in debian/rules.

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Sun, 28 Sep 2008 12:33:31 +0200

kde4libs (4:4.1.1-1) experimental; urgency=low

  * New upstream release.

  +++ Changes by Sune Vuorela:

  * Update patches;
    - remove 01_r840377_840379_unload_on_close.diff merged upstream
    - remove 02_41branch_link_interface_libraries.diff.