@@ -4,18 +4,20 @@ can be used to enable them.
 See also 04_disable_debug_by_default.diff in kdebase-runtime.
 --- a/kdecore/io/kdebug.cpp
 +++ b/kdecore/io/kdebug.cpp
-@@ -313,7 +313,7 @@
+@@ -313,7 +313,9 @@ struct KDebugPrivate
          }
  
          KConfigGroup cg(config, QString::number(area));
 -        int mode = cg.readEntry(key, 2);
-+        int mode = cg.readEntry(key, 4);
++	// disable debug output by default
++	int defaultMode = type == QtDebugMsg ? 4 : 2;
++        int mode = cg.readEntry(key, defaultMode);
          return OutputMode(mode);
      }
  
 --- a/kdecore/kdebugrc
 +++ b/kdecore/kdebugrc
-@@ -82,7 +82,7 @@
+@@ -82,7 +82,7 @@ InfoOutput=4
  
  # KMail
  [5006]
