@@ -64,7 +64,12 @@ kde4libs (4:4.1.85+svn896225-0r1) UNRELEASED; urgency=low
   * Redo patch 20_use_dejavu_as_default_font.diff.
   * Force to build depend on libphonon-dev (>= 4:4.2.80).
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 13 Dec 2008 01:39:11 +0200
+  +++ Changes by Armin Berres:
+
+  * Fix patch 09_disable_debug_messages_if_not_explicitly_enabled.diff. Now
+    really only debug output is disabled.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 14 Dec 2008 22:39:49 +0100
 
 kde4libs (4:4.1.3-2) experimental; urgency=low
 
